--- a/QuizApplication/app/src/main/res/values/strings.xml
+++ b/QuizApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Quiz Application</string>
+
+    <string name="true_text">True</string>
+    <string name="false_text">False</string>
+
+    <string name="question_text">Is Earth Flath?</string>
 </resources>
